@@ -1,7 +1,17 @@
 package br.com.vadebicicleta.scb.equipamento.service;
 
-import br.com.vadebicicleta.scb.equipamento.dto.*;
-import br.com.vadebicicleta.scb.equipamento.entity.Bicicleta;
+import java.util.List;
+import java.util.UUID;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import br.com.vadebicicleta.scb.equipamento.dto.AlteraTrancaDTO;
+import br.com.vadebicicleta.scb.equipamento.dto.BicicletaDTO;
+import br.com.vadebicicleta.scb.equipamento.dto.NovaTrancaDTO;
+import br.com.vadebicicleta.scb.equipamento.dto.TrancaDTO;
+import br.com.vadebicicleta.scb.equipamento.dto.TrancaIntegrarDTO;
+import br.com.vadebicicleta.scb.equipamento.dto.TrancaRetirarDTO;
 import br.com.vadebicicleta.scb.equipamento.entity.Totem;
 import br.com.vadebicicleta.scb.equipamento.entity.Tranca;
 import br.com.vadebicicleta.scb.equipamento.entity.TrancaStatus;
@@ -12,12 +22,6 @@ import br.com.vadebicicleta.scb.equipamento.mapper.TrancaMapper;
 import br.com.vadebicicleta.scb.equipamento.repository.BicicletaRepository;
 import br.com.vadebicicleta.scb.equipamento.repository.TotemRepository;
 import br.com.vadebicicleta.scb.equipamento.repository.TrancaRepository;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -27,12 +31,16 @@ public class TrancaService {
     private final TotemRepository totemRepository;
     private final TrancaMapper trancaMapper;
     private final BicicletaMapper bicicletaMapper;
+    private final BicicletaRepository bicicletaRepository;
 
-    public TrancaService(TrancaRepository trancaRepository, TotemRepository totemRepository, TrancaMapper trancaMapper, BicicletaMapper bicicletaMapper) {
+    private static final String TRANCA_NAO_ENCONTRADA = "Tranca não encontrada com o ID: ";
+
+    public TrancaService(BicicletaRepository bicicletaRepository, TrancaRepository trancaRepository, TotemRepository totemRepository, TrancaMapper trancaMapper, BicicletaMapper bicicletaMapper) {
         this.trancaRepository = trancaRepository;
         this.totemRepository = totemRepository;
         this.trancaMapper = trancaMapper;
         this.bicicletaMapper = bicicletaMapper;
+        this.bicicletaRepository = bicicletaRepository;
     }
 
     public TrancaDTO cadastrarTranca(NovaTrancaDTO dto) {
@@ -42,15 +50,17 @@ public class TrancaService {
         return trancaMapper.toDto(trancaRepository.save(tranca));
     }
 
-    public TrancaDTO alterarTranca(UUID idTranca, AlteraTrancaDTO dto) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
+    public TrancaDTO alterarTranca(Long idTranca, AlteraTrancaDTO dto) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
         trancaMapper.updateEntityFromDto(dto, tranca);
         return trancaMapper.toDto(trancaRepository.save(tranca));
     }
 
-    public void integrarNaRede(UUID idTranca, TrancaIntegrarDTO dto) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
-        Totem totem = totemRepository.findByPublicId(dto.getIdTotem())
+    public void integrarNaRede(Long idTranca, TrancaIntegrarDTO dto) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
+        Totem totem = totemRepository.findById(dto.getIdTotem())
                 .orElseThrow(() -> new RecursoNaoEncontradoException("Totem não encontrado."));
 
         if (tranca.getStatus() != TrancaStatus.NOVA && tranca.getStatus() != TrancaStatus.EM_REPARO) {
@@ -61,8 +71,9 @@ public class TrancaService {
         trancaRepository.save(tranca);
     }
 
-    public void retirarDaRede(UUID idTranca, TrancaRetirarDTO dto) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
+    public void retirarDaRede(Long idTranca, TrancaRetirarDTO dto) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
         if (tranca.getStatus() == TrancaStatus.OCUPADA) {
             throw new RegraDeNegocioException("Não é possível retirar uma tranca que está ocupada.");
         }
@@ -82,8 +93,9 @@ public class TrancaService {
         trancaRepository.save(tranca);
     }
 
-    public TrancaDTO alterarStatus(UUID idTranca, String acao) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
+    public TrancaDTO alterarStatus(Long idTranca, String acao) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
         // Lógica para trancar/destrancar
         if ("TRANCAR".equalsIgnoreCase(acao)) {
             tranca.setStatus(TrancaStatus.OCUPADA);
@@ -96,32 +108,53 @@ public class TrancaService {
     }
 
     public List<TrancaDTO> listarTodas() {
-        return trancaRepository.findAll().stream().map(trancaMapper::toDto).collect(Collectors.toList());
+        return trancaRepository.findAll().stream().map(trancaMapper::toDto).toList();
     }
 
-    public TrancaDTO buscarPorId(UUID idTranca) {
-        return trancaMapper.toDto(findTrancaByPublicId(idTranca));
+    public TrancaDTO buscarPorId(Long idTranca) {
+        return trancaMapper.toDto(trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca)));
     }
 
-    public BicicletaDTO obterBicicleta(UUID idTranca) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
+    public BicicletaDTO obterBicicleta(Long idTranca) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
         if (tranca.getBicicleta() == null) {
             throw new RecursoNaoEncontradoException("Nenhuma bicicleta encontrada na tranca " + idTranca);
         }
         return bicicletaMapper.toDto(tranca.getBicicleta());
     }
 
-    public void deletar(UUID idTranca) {
-        Tranca tranca = findTrancaByPublicId(idTranca);
+    public void deletar(Long idTranca) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
         if (tranca.getStatus() == TrancaStatus.OCUPADA) {
             throw new RegraDeNegocioException("Não é possível remover tranca ocupada.");
         }
         trancaRepository.delete(tranca);
     }
 
-    private Tranca findTrancaByPublicId(UUID id) {
-        return trancaRepository.findByPublicId(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Tranca não encontrada com o ID: " + id));
+    public TrancaDTO trancar(Long idTranca, Long idBicicleta) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
+        if (tranca.getStatus() != TrancaStatus.LIVRE) {
+            throw new RegraDeNegocioException("Tranca não está livre para ser trancada.");
+        }
+        tranca.setStatus(TrancaStatus.OCUPADA);
+        tranca.setBicicleta(bicicletaRepository.findById(idBicicleta)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException("Bicicleta não encontrada com o ID: " + idBicicleta)));
+        return trancaMapper.toDto(trancaRepository.save(tranca));
+    }
+
+    public TrancaDTO destrancar(Long idTranca) {
+        Tranca tranca = trancaRepository.findById(idTranca)
+                        .orElseThrow(() -> new RecursoNaoEncontradoException(TRANCA_NAO_ENCONTRADA + idTranca));
+        if (tranca.getStatus() != TrancaStatus.OCUPADA && tranca.getStatus() != TrancaStatus.EM_REPARO) {
+            throw new RegraDeNegocioException("Tranca não está ocupada para ser destrancada.");
+        }
+        tranca.setStatus(TrancaStatus.LIVRE);
+        tranca.setBicicleta(null);
+        return trancaMapper.toDto(trancaRepository.save(tranca));
     }
 
     public void restaurarBanco() {
